--- a/nbs/parse_module.ipynb
+++ b/nbs/parse_module.ipynb
@@ -326,12 +326,12 @@
     "    results_index = step.code.find(f\"{step.return_stmt} =\")\n",
     "    if results_index == -1:\n",
     "        return []\n",
-    "    \n",
+    "\n",
     "    keys = []\n",
     "    for l in step.code[results_index:].split(\"\\n\"):\n",
     "        if l.strip().find(\":\") > -1:\n",
     "            key_prefix = l.split(\":\")[0]\n",
-    "            key = key_prefix[key_prefix.find('{')+1:]\n",
+    "            key = key_prefix[key_prefix.find(\"{\") + 1 :]\n",
     "            keys.append(key.strip(' \",'))\n",
     "    return keys"
    ]
@@ -342,8 +342,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert ['some_field'] == extract_return_var_names(parse_step(named_return))\n",
-    "assert ['word_summaries', 'artifacts', 'metrics'] == extract_return_var_names(parse_step(multiple_key_return))"
+    "assert [\"some_field\"] == extract_return_var_names(parse_step(named_return))\n",
+    "assert [\"word_summaries\", \"artifacts\", \"metrics\"] == extract_return_var_names(\n",
+    "    parse_step(multiple_key_return)\n",
+    ")"
    ]
   },
   {
