--- a/nbs/to_sagemaker.ipynb
+++ b/nbs/to_sagemaker.ipynb
@@ -48,7 +48,7 @@
     "from sciflow.data_handler import extract_param_meta\n",
     "from sciflow.packaging import determine_dependencies\n",
     "from sciflow.params import params_as_dict\n",
-    "from sciflow.parse_module import FuncDetails, extract_steps, extract_return_var_names\n",
+    "from sciflow.parse_module import FuncDetails, extract_return_var_names, extract_steps\n",
     "from sciflow.utils import get_flow_path, lib_path"
    ]
   },
@@ -299,13 +299,9 @@
     "                \"from sagemaker.workflow.steps import ProcessingStep, TrainingStep\\n\"\n",
     "            )\n",
     "        elif has_train_step:\n",
-    "            flow_file.write(\n",
-    "                \"from sagemaker.workflow.steps import TrainingStep\\n\"\n",
-    "            )\n",
+    "            flow_file.write(\"from sagemaker.workflow.steps import TrainingStep\\n\")\n",
     "        elif has_processing_step:\n",
-    "            flow_file.write(\n",
-    "                \"from sagemaker.workflow.steps import ProcessingStep\\n\"\n",
-    "            )\n",
+    "            flow_file.write(\"from sagemaker.workflow.steps import ProcessingStep\\n\")\n",
     "        if has_processing_step:\n",
     "            flow_file.write(\n",
     "                \"from sagemaker.processing import ScriptProcessor, ProcessingInput, ProcessingOutput\\n\"\n",
@@ -416,7 +412,9 @@
     "            f'{ind}{ind}self.s3_client.upload_file(\"{flow_reqs_path}\", self.bucket, f\"{{self.s3_prefix}}/requirements.txt\")\\n'\n",
     "        )\n",
     "        for proc_step in proc_steps:\n",
-    "            step_module = f\"_sciflow_{extract_module_only(module_name)}_{proc_step.name}.py\"\n",
+    "            step_module = (\n",
+    "                f\"_sciflow_{extract_module_only(module_name)}_{proc_step.name}.py\"\n",
+    "            )\n",
     "            flow_file.write(\n",
     "                f'{ind}{ind}self.s3_client.upload_file(\"{Path(lib_path(), config.flows_path, \"sagemaker\", step_module)}\", self.bucket, f\"{{self.s3_prefix}}/code/{step_module}\")\\n'\n",
     "            )\n",
@@ -892,9 +890,7 @@
     "                flow_file.write(f\"\\n\")\n",
     "                flow_file.write(f\"{ind}{ind}estimator = Estimator(\\n\")\n",
     "                # TODO extract train_image_uri\n",
-    "                flow_file.write(\n",
-    "                    f'{ind}{ind}{ind}image_uri = \"{train_image_uri}\",\\n'\n",
-    "                )\n",
+    "                flow_file.write(f'{ind}{ind}{ind}image_uri = \"{train_image_uri}\",\\n')\n",
     "                flow_file.write(\n",
     "                    f'{ind}{ind}{ind}entry_point = \"_sciflow_{module_local_name}_{step.name}.py\",\\n'\n",
     "                )\n",
@@ -912,7 +908,9 @@
     "                for key, val in hyper_params.items():\n",
     "                    flow_file.write(f'{ind}{ind}{ind}{ind}\"{key}\": {val},\\n')\n",
     "                flow_file.write(f\"{ind}{ind}{ind}}},\\n\")\n",
-    "                flow_file.write(f'{ind}{ind}{ind}instance_type = \"{train_instance_type}\",\\n')\n",
+    "                flow_file.write(\n",
+    "                    f'{ind}{ind}{ind}instance_type = \"{train_instance_type}\",\\n'\n",
+    "                )\n",
     "                flow_file.write(f\"{ind}{ind}{ind}instance_count = 1,\\n\")\n",
     "                flow_file.write(f\"{ind}{ind}{ind}output_path = self.flow_s3_uri,\\n\")\n",
     "                flow_file.write(f'{ind}{ind}{ind}base_job_name = \"{step.name}\",\\n')\n",
@@ -1057,8 +1055,10 @@
     "    lib_refs = [l.replace(\"..\", f\"{lib_name}.\") for l in lib_refs]\n",
     "\n",
     "    for step in steps:\n",
-    "        sm_module_path = Path(flow_path.parent, \"_sciflow_\" + flow_path.stem + f\"_{step.name}.py\")\n",
-    "        \n",
+    "        sm_module_path = Path(\n",
+    "            flow_path.parent, \"_sciflow_\" + flow_path.stem + f\"_{step.name}.py\"\n",
+    "        )\n",
+    "\n",
     "        with open(sm_module_path, \"w\") as sm_module_file:\n",
     "            sm_module_file.write(\"\".join(lines))\n",
     "            sm_module_file.write(\"\\n\\n# SCIFLOW->SAGEMAKER ADAPTER FROM THIS POINT\\n\")\n",
