--- a/nbs/run_flow.ipynb
+++ b/nbs/run_flow.ipynb
@@ -34,17 +34,14 @@
     "import subprocess\n",
     "import sys\n",
     "from itertools import product\n",
-    "from pathlib import Path, PosixPath\n",
+    "from pathlib import Path\n",
     "from typing import Any, Dict, Iterable\n",
     "\n",
     "import pandas as pd\n",
-    "from fastcore.script import Param, call_parse\n",
-    "from nbdev.export import find_default_export, get_config, nbglob, read_nb\n",
+    "from fastcore.script import call_parse\n",
+    "from nbdev.export import find_default_export, get_config, read_nb\n",
     "\n",
-    "from sciflow.data_handler import extract_param_meta\n",
-    "from sciflow.params import params_as_dict\n",
-    "from sciflow.parse_module import FuncDetails, extract_steps\n",
-    "from sciflow.utils import prepare_env, get_flow_path"
+    "from sciflow.utils import get_flow_path, prepare_env"
    ]
   },
   {
@@ -98,7 +95,9 @@
     "\n",
     "\n",
     "def run_shell_cmd(script: str):\n",
-    "    pipe = subprocess.Popen(\"%s\" % script, stdout=subprocess.PIPE, stderr=subprocess.STDOUT, shell=True)\n",
+    "    pipe = subprocess.Popen(\n",
+    "        \"%s\" % script, stdout=subprocess.PIPE, stderr=subprocess.STDOUT, shell=True\n",
+    "    )\n",
     "    output = pipe.communicate()[0]\n",
     "    return pipe, output.decode(\"utf-8\").strip()"
    ]
@@ -111,7 +110,10 @@
    "source": [
     "# export\n",
     "\n",
-    "def check_call_flow(flow_nb_path, flow_provider=\"metaflow\", flow_command=\"show\", params=None):\n",
+    "\n",
+    "def check_call_flow(\n",
+    "    flow_nb_path, flow_provider=\"metaflow\", flow_command=\"show\", params=None\n",
+    "):\n",
     "    prepare_env()\n",
     "    if flow_nb_path.suffix == \".ipynb\":\n",
     "        flow_path = get_flow_path(nb_path, flow_provider=flow_provider)\n",
@@ -120,7 +122,7 @@
     "    if params:\n",
     "        args = \" \".join([f\"--{p[0]} {p[1]}\" for p in params])\n",
     "        flow_command = f\"{flow_command} {args}\"\n",
-    "    \n",
+    "\n",
     "    script = f\"python '{flow_path}' {flow_command}\"\n",
     "    pipe, output = run_shell_cmd(script)\n",
     "    return pipe.returncode, output"
@@ -132,8 +134,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ret_code, output = check_call_flow(nb_path, flow_provider = 'metaflow', flow_command = 'show')\n",
-    "assert(ret_code==0)"
+    "ret_code, output = check_call_flow(\n",
+    "    nb_path, flow_provider=\"metaflow\", flow_command=\"show\"\n",
+    ")\n",
+    "assert ret_code == 0"
    ]
   },
   {
@@ -171,8 +175,10 @@
    "source": [
     "# slow\n",
     "\n",
-    "ret_code, output = check_call_flow(nb_path, flow_provider = 'metaflow', flow_command = 'run')\n",
-    "assert(ret_code==0)\n",
+    "ret_code, output = check_call_flow(\n",
+    "    nb_path, flow_provider=\"metaflow\", flow_command=\"run\"\n",
+    ")\n",
+    "assert ret_code == 0\n",
     "print(output)"
    ]
   },
@@ -182,8 +188,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ret_code, output = check_call_flow(nb_path, flow_provider = 'sagemaker', flow_command = 'show')\n",
-    "assert(ret_code==0)"
+    "ret_code, output = check_call_flow(\n",
+    "    nb_path, flow_provider=\"sagemaker\", flow_command=\"show\"\n",
+    ")\n",
+    "assert ret_code == 0"
    ]
   },
   {
@@ -201,10 +209,12 @@
     }
    ],
    "source": [
-    "# slow \n",
+    "# slow\n",
     "\n",
-    "ret_code, output = check_call_flow(nb_path, flow_provider = 'sagemaker', flow_command = 'run')\n",
-    "assert(ret_code==0)\n",
+    "ret_code, output = check_call_flow(\n",
+    "    nb_path, flow_provider=\"sagemaker\", flow_command=\"run\"\n",
+    ")\n",
+    "assert ret_code == 0\n",
     "print(output)"
    ]
   },
@@ -227,23 +237,31 @@
     "\n",
     "\n",
     "def check_call_flows(\n",
-    "    config, flow_provider = 'metaflow', flow_command=\"show\", ignore_suffix=None, exit_on_error=True\n",
+    "    config,\n",
+    "    flow_provider=\"metaflow\",\n",
+    "    flow_command=\"show\",\n",
+    "    ignore_suffix=None,\n",
+    "    exit_on_error=True,\n",
     "):\n",
     "    flow_results = {}\n",
     "    flows_dir = Path(config.path(\"flows_path\"), flow_provider)\n",
-    "    \n",
+    "\n",
     "    if ignore_suffix:\n",
-    "        flow_file_names = [p for p in os.listdir(flows_dir) if not p.endswith(ignore_suffix)]\n",
+    "        flow_file_names = [\n",
+    "            p for p in os.listdir(flows_dir) if not p.endswith(ignore_suffix)\n",
+    "        ]\n",
     "    else:\n",
     "        flow_file_names = os.listdir(flows_dir)\n",
     "    ret_codes = []\n",
     "    exit_code = 0\n",
     "    for flow_file_name in flow_file_names:\n",
     "        flow_name = os.path.basename(flow_file_name)\n",
-    "        if flow_file_name.startswith('_sciflow'):\n",
+    "        if flow_file_name.startswith(\"_sciflow\"):\n",
     "            continue\n",
     "        if flow_file_name.endswith(\".py\"):\n",
-    "            ret_code, output = check_call_flow(Path(flows_dir, flow_file_name), flow_command=flow_command)\n",
+    "            ret_code, output = check_call_flow(\n",
+    "                Path(flows_dir, flow_file_name), flow_command=flow_command\n",
+    "            )\n",
     "            flow_results[flow_name] = ret_code, output\n",
     "            if ret_code == 0:\n",
     "                print(f\"Flow: {flow_name} {flow_command} verified\")\n",
@@ -323,7 +341,11 @@
    "source": [
     "# slow\n",
     "\n",
-    "check_call_flows(get_config(cfg_name=\"test/settings.ini\"), flow_command=\"--no-pylint run\", ignore_suffix=\"_no_params.py\")"
+    "check_call_flows(\n",
+    "    get_config(cfg_name=\"test/settings.ini\"),\n",
+    "    flow_command=\"--no-pylint run\",\n",
+    "    ignore_suffix=\"_no_params.py\",\n",
+    ")"
    ]
   },
   {
@@ -394,7 +416,7 @@
     "nb_path = Path(Path(\".\").resolve(), \"test\", \"test_multistep.ipynb\")\n",
     "ret_code, output = check_call_flow(\n",
     "    nb_path,\n",
-    "    flow_command = 'run',\n",
+    "    flow_command=\"run\",\n",
     "    params=[(\"traffic_percent\", 1), (\"model_level\", \"dispatcher\")],\n",
     ")\n",
     "print(output)\n",
