[WIP] Async run complete. SM params nearly working..

--- a/nbs/to_sagemaker.ipynb
+++ b/nbs/to_sagemaker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,18 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -30,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +98,7 @@
        "Path('/home/sagemaker-user/git/sciflow/nbs/test/flows/sagemaker/test_multistep.py')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,6 +332,10 @@
     "        flow_file.write(f\"\\n\\nclass {pipeline_class_name}():\\n\")\n",
     "        ind = \"    \"\n",
     "        write_params(flow_file, param_meta, ind)\n",
+    "        \n",
+    "        flow_file.write(f\"{ind}args = None\\n\")\n",
+    "        flow_file.write(f\"{ind}param_types = {dict(zip(param_meta.keys(), [v.instance_type.__name__ for v in param_meta.values()]))}\\n\")\n",
+    "    \n",
     "        flow_file.write(\"\\n\")\n",
     "        flow_file.write(f\"{ind}steps = {[s.name for s in steps]}\\n\")\n",
     "        flow_file.write(\"\\n\")\n",
@@ -360,17 +355,34 @@
     "            track_experiment,\n",
     "        )\n",
     "        flow_file.write(\"\\n\")\n",
-    "\n",
+    "        \n",
+    "        flow_file.write(f\"{ind}def set_run_params(self):\\n\")\n",
+    "        flow_file.write(f\"{ind}{ind}for arg_key, arg_val in self.args.items():\\n\")\n",
+    "        flow_file.write(f\"{ind}{ind}{ind}for param in self.param_types.keys():\\n\")\n",
+    "        flow_file.write(f\"{ind}{ind}{ind}{ind}if arg_key.strip('-') == param:\\n\")\n",
+    "        flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}if self.param_types[param] == 'int':\\n\")\n",
+    "        flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}{ind}setattr(self, param, ParameterInteger(name=param, default_value=int(arg_val)))\\n\")\n",
+    "        flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}elif self.param_types[param] == 'float':\\n\")\n",
+    "        flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}{ind}setattr(self, param, ParameterFloat(name=param, default_value=int(arg_val)))\\n\")\n",
+    "        flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}elif self.param_types[param] == 'str':\\n\")\n",
+    "        flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}{ind}setattr(self, param, ParameterString(name=param, default_value=int(arg_val)))\\n\")\n",
+    "        flow_file.write(\"\\n\")\n",
+    "        \n",
     "        flow_file.write(f\"{ind}def get_pipeline(self) -> Pipeline:\\n\")\n",
     "        flow_file.write(\n",
     "            f\"{ind}{ind}pipeline_steps = [getattr(self, step)() for step in self.steps]\\n\"\n",
     "        )\n",
+    "        flow_file.write(f\"{ind}{ind}parameters=[\\n\")\n",
+    "        for param_name in params.keys():\n",
+    "            flow_file.write(f\"{ind}{ind}{ind}self.{param_name},\\n\")\n",
+    "        flow_file.write(f\"{ind}{ind}],\\n\")\n",
+    "        \n",
+    "        flow_file.write(f\"{ind}{ind}if len(self.args) > 0:\\n\")\n",
+    "        flow_file.write(f\"{ind}{ind}{ind}self.set_run_params()\\n\")\n",
+    "        \n",
     "        flow_file.write(f\"{ind}{ind}pipeline = Pipeline(\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}{ind}name=self.flow_name,\\n\")\n",
-    "        flow_file.write(f\"{ind}{ind}{ind}parameters=[\\n\")\n",
-    "        for param_name in params.keys():\n",
-    "            flow_file.write(f\"{ind}{ind}{ind}{ind}self.{param_name},\\n\")\n",
-    "        flow_file.write(f\"{ind}{ind}{ind}],\\n\")\n",
+    "        flow_file.write(f\"{ind}{ind}{ind}parameters=parameters,\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}{ind}steps = pipeline_steps,\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}{ind}sagemaker_session = self.sagemaker_session,\\n\")\n",
     "        flow_file.write(f\"{ind}{ind})\\n\")\n",
@@ -460,14 +472,19 @@
     "        flow_file.write(f\"{ind}{ind}if sys.argv[1] == 'show':\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}{ind}{pipeline_class_name}().show()\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}if sys.argv[1] == 'run':\\n\")\n",
-    "        flow_file.write(f\"{ind}{ind}{ind}{pipeline_class_name}().run()\\n\")\n",
+    "        flow_file.write(f\"{ind}{ind}{ind}flow = {pipeline_class_name}()\\n\")\n",
+    "        flow_file.write(f\"{ind}{ind}{ind}if len(sys.argv[2:]) > 0:\\n\")\n",
+    "        flow_file.write(f\"{ind}{ind}{ind}{ind}args = sys.argv[2:]\\n\")\n",
+    "        flow_file.write(f\"{ind}{ind}{ind}{ind}flow.args = dict(list(zip(args, args[1:]))[::2])\\n\")\n",
+    "        flow_file.write(f\"{ind}{ind}{ind}flow.run()\\n\")\n",
+    "        \n",
     "\n",
     "        return steps_param_meta, steps_vars"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1004,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1015,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1198,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1273,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1284,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1293,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1321,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1330,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1350,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1364,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1385,7 +1402,7 @@
       "Created sagemaker module: _sciflow_test_module_first.py\n",
       "No params cell found for: test_multistep_no_params.ipynb\n",
       "Sagemaker conversion failed for test_multistep_no_params.ipynb, \n",
-      "Reason: Step: preprocess depends on variable(s), \"{'traffic_percent', 'min_date', 'model_level'}\", which are not in the flow scope\n",
+      "Reason: Step: preprocess depends on variable(s), \"{'min_date', 'model_level', 'traffic_percent'}\", which are not in the flow scope\n",
       "Sagemaker conversion failed for test_data_handling.ipynb, \n",
       "Reason: Unsupported parameter type for sagemaker pipeline: ParamMeta(instance_type=<class 'dict'>, is_scalar=False, is_json_type=True, persist_type='pickle', has_metaflow_param=True, has_sagemaker_param=False)\n"
      ]
