--- a/nbs/utils.ipynb
+++ b/nbs/utils.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,6 +29,7 @@
     "import ast\n",
     "import os\n",
     "from pathlib import Path\n",
+    "from itertools import islice\n",
     "\n",
     "import nbformat\n",
     "import pandas as pd\n",
