Remvoed flow runnign from to_metaflow. Added metaflow + sagemaker commands

--- a/nbs/run_flow.ipynb
+++ b/nbs/run_flow.ipynb
@@ -426,7 +426,7 @@
    "source": [
     "# export\n",
     "\n",
-    "async def flow_task(flow_nb_path, flow_provider=\"metaflow\", flow_command = \"run\", params=None):\n",
+    "async def flow_task(flow_nb_path, flow_provider=\"metaflow\", flow_command=\"run\", params=None):\n",
     "    cmd = make_shell_cmd(flow_nb_path, flow_provider, flow_command, params)\n",
     "\n",
     "    proc = await asyncio.create_subprocess_shell(\n",
@@ -455,7 +455,7 @@
     "# export\n",
     "\n",
     "\n",
-    "def run_flow_async(flow_nb_path, flow_provider=\"metaflow\", flow_command = \"run\", params=None):    \n",
+    "def run_flow_async(flow_nb_path, flow_provider=\"metaflow\", flow_command=\"run\", params=None):    \n",
     "    loop = asyncio.get_event_loop()\n",
     "    task = loop.create_task(flow_task(flow_nb_path, flow_provider, flow_command, params))\n",
     "    return task"
@@ -572,6 +572,7 @@
    ],
    "source": [
     "# slow\n",
+    "\n",
     "await task\n",
     "assert(0 == task.result()[0])"
    ]
@@ -622,21 +623,29 @@
    ],
    "source": [
     "# slow\n",
+    "\n",
     "await task\n",
     "assert(0 == task.result()[0])"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TODO Get working again"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_grid = {\n",
-    "    \"traffic_percent\": [1, 5, 10, 20, 50, 100],\n",
-    "    \"model_level\": [\"router\", \"dispatcher\"],\n",
-    "    \"workers\": [1],\n",
-    "}"
+    "# param_grid = {\n",
+    "#     \"traffic_percent\": [1, 5, 10, 20, 50, 100],\n",
+    "#     \"model_level\": [\"router\", \"dispatcher\"],\n",
+    "#     \"workers\": [1],\n",
+    "# }"
    ]
   },
   {
@@ -645,21 +654,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# # export\n",
     "\n",
     "\n",
-    "def iter_param_grid(param_grid):\n",
-    "    # https://github.com/scikit-learn/scikit-learn/blob/main/sklearn/model_selection/_search.py\n",
-    "    for p in [param_grid]:\n",
-    "        # Always sort the keys of a dictionary, for reproducibility\n",
-    "        items = sorted(p.items())\n",
-    "        if not items:\n",
-    "            yield {}\n",
-    "        else:\n",
-    "            keys, values = zip(*items)\n",
-    "            for v in product(*values):\n",
-    "                params = dict(zip(keys, v))\n",
-    "                yield params"
+    "# def iter_param_grid(param_grid):\n",
+    "#     # https://github.com/scikit-learn/scikit-learn/blob/main/sklearn/model_selection/_search.py\n",
+    "#     for p in [param_grid]:\n",
+    "#         # Always sort the keys of a dictionary, for reproducibility\n",
+    "#         items = sorted(p.items())\n",
+    "#         if not items:\n",
+    "#             yield {}\n",
+    "#         else:\n",
+    "#             keys, values = zip(*items)\n",
+    "#             for v in product(*values):\n",
+    "#                 params = dict(zip(keys, v))\n",
+    "#                 yield params"
    ]
   },
   {
@@ -668,9 +677,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert [{\"a\": 1, \"b\": 1, \"c\": \"hello\"}, {\"a\": 2, \"b\": 1, \"c\": \"hello\"}] == list(\n",
-    "    iter_param_grid({\"a\": [1, 2], \"b\": [1], \"c\": [\"hello\"]})\n",
-    ")"
+    "# assert [{\"a\": 1, \"b\": 1, \"c\": \"hello\"}, {\"a\": 2, \"b\": 1, \"c\": \"hello\"}] == list(\n",
+    "#     iter_param_grid({\"a\": [1, 2], \"b\": [1], \"c\": [\"hello\"]})\n",
+    "# )"
    ]
   },
   {
@@ -679,16 +688,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# # export\n",
     "\n",
     "\n",
-    "def sample_grid_space(param_grid: Dict[str, Iterable[Any]], num_samples: int):\n",
-    "    samples = []\n",
-    "    for i, sample in enumerate(iter_param_grid(param_grid)):\n",
-    "        samples.append(sample)\n",
-    "    if num_samples < len(samples):\n",
-    "        samples = pd.Series(samples).sample(num_samples).tolist()\n",
-    "    return samples"
+    "# def sample_grid_space(param_grid: Dict[str, Iterable[Any]], num_samples: int):\n",
+    "#     samples = []\n",
+    "#     for i, sample in enumerate(iter_param_grid(param_grid)):\n",
+    "#         samples.append(sample)\n",
+    "#     if num_samples < len(samples):\n",
+    "#         samples = pd.Series(samples).sample(num_samples).tolist()\n",
+    "#     return samples"
    ]
   },
   {
@@ -697,10 +706,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_space = sample_grid_space({\"a\": [1, 2], \"b\": [1], \"c\": [\"hello\"]}, 1)\n",
-    "assert sample_space[0][\"b\"] == 1\n",
-    "assert sample_space[0][\"c\"] == \"hello\"\n",
-    "assert sample_space[0][\"a\"] == 1 or sample_space[0][\"a\"] == 2"
+    "# sample_space = sample_grid_space({\"a\": [1, 2], \"b\": [1], \"c\": [\"hello\"]}, 1)\n",
+    "# assert sample_space[0][\"b\"] == 1\n",
+    "# assert sample_space[0][\"c\"] == \"hello\"\n",
+    "# assert sample_space[0][\"a\"] == 1 or sample_space[0][\"a\"] == 2"
    ]
   },
   {
@@ -709,18 +718,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# # export\n",
     "\n",
     "\n",
-    "def search_flow_grid(nb_path, param_grid, num_procs=None):\n",
-    "    if num_procs is None:\n",
-    "        num_procs = int((multiprocessing.cpu_count() / 2) - 1)\n",
+    "# def search_flow_grid(nb_path, param_grid, num_procs=None):\n",
+    "#     if num_procs is None:\n",
+    "#         num_procs = int((multiprocessing.cpu_count() / 2) - 1)\n",
     "\n",
-    "    param_sample_space = sample_grid_space(param_grid, num_procs)\n",
-    "    tasks = []\n",
-    "    for param_sample in param_sample_space:\n",
-    "        tasks.append(run_flow_async(nb_path, params=param_sample))\n",
-    "    return tasks"
+    "#     param_sample_space = sample_grid_space(param_grid, num_procs)\n",
+    "#     tasks = []\n",
+    "#     for param_sample in param_sample_space:\n",
+    "#         tasks.append(run_flow_async(nb_path, params=param_sample))\n",
+    "#     return tasks"
    ]
   },
   {
@@ -729,21 +738,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# slow\n",
-    "nb_path = Path(\n",
-    "    Path(\".\").resolve(),\n",
-    "    \"test\",\n",
-    "    \"test_multistep.ipynb\",\n",
-    ")\n",
-    "tasks = search_flow_grid(\n",
-    "    nb_path,\n",
-    "    {\n",
-    "        \"traffic_percent\": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 20, 30, 40, 50],\n",
-    "        \"model_level\": [\"dispatcher\"],\n",
-    "        \"workers\": [1],\n",
-    "    },\n",
-    "    2,\n",
-    ")"
+    "# # slow\n",
+    "# nb_path = Path(\n",
+    "#     Path(\".\").resolve(),\n",
+    "#     \"test\",\n",
+    "#     \"test_multistep.ipynb\",\n",
+    "# )\n",
+    "# tasks = search_flow_grid(\n",
+    "#     nb_path,\n",
+    "#     {\n",
+    "#         \"traffic_percent\": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 20, 30, 40, 50],\n",
+    "#         \"model_level\": [\"dispatcher\"],\n",
+    "#         \"workers\": [1],\n",
+    "#     },\n",
+    "#     2,\n",
+    "# )"
    ]
   },
   {
@@ -752,9 +761,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# slow\n",
+    "# # slow\n",
     "\n",
-    "[t.done() for t in tasks]"
+    "# [t.done() for t in tasks]"
    ]
   },
   {
@@ -763,9 +772,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# slow\n",
+    "# # slow\n",
     "\n",
-    "[t.result() for t in tasks]"
+    "# [t.result() for t in tasks]"
    ]
   },
   {
@@ -779,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,8 +796,50 @@
     "\n",
     "\n",
     "@call_parse\n",
-    "def sciflow_check_flows():\n",
-    "    check_flows(get_config())"
+    "def sciflow_check_metaflows():\n",
+    "    check_call_flows(get_config())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "@call_parse\n",
+    "def sciflow_check_sagemaker_flows():\n",
+    "    check_call_flows(get_config(), flow_provider = \"sagemaker\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "@call_parse\n",
+    "def sciflow_run_metaflows():\n",
+    "    check_call_flows(get_config(), flow_command = \"--no-pylint run\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "@call_parse\n",
+    "def sciflow_run_sagemaker_flows():\n",
+    "    check_call_flows(get_config(), flow_command = \"run\", flow_provider = \"sagemaker\")"
    ]
   },
   {
@@ -796,14 +847,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# export\n",
-    "\n",
-    "\n",
-    "@call_parse\n",
-    "def sciflow_run_flows():\n",
-    "    check_flows(get_config(), \"--no-pylint run\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
