--- a/nbs/to_sagemaker.ipynb
+++ b/nbs/to_sagemaker.ipynb
@@ -372,17 +372,16 @@
     "        flow_file.write(\n",
     "            f\"{ind}{ind}pipeline_steps = [getattr(self, step)() for step in self.steps]\\n\"\n",
     "        )\n",
-    "        flow_file.write(f\"{ind}{ind}parameters=[\\n\")\n",
-    "        for param_name in params.keys():\n",
-    "            flow_file.write(f\"{ind}{ind}{ind}self.{param_name},\\n\")\n",
-    "        flow_file.write(f\"{ind}{ind}],\\n\")\n",
-    "        \n",
     "        flow_file.write(f\"{ind}{ind}if len(self.args) > 0:\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}{ind}self.set_run_params()\\n\")\n",
+    "        flow_file.write(\"\\n\")\n",
     "        \n",
     "        flow_file.write(f\"{ind}{ind}pipeline = Pipeline(\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}{ind}name=self.flow_name,\\n\")\n",
-    "        flow_file.write(f\"{ind}{ind}{ind}parameters=parameters,\\n\")\n",
+    "        flow_file.write(f\"{ind}{ind}{ind}parameters=[\\n\")\n",
+    "        for param_name in params.keys():\n",
+    "            flow_file.write(f\"{ind}{ind}{ind}{ind}self.{param_name},\\n\")\n",
+    "        flow_file.write(f\"{ind}{ind}{ind}],\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}{ind}steps = pipeline_steps,\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}{ind}sagemaker_session = self.sagemaker_session,\\n\")\n",
     "        flow_file.write(f\"{ind}{ind})\\n\")\n",
