--- a/nbs/to_sagemaker.ipynb
+++ b/nbs/to_sagemaker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,9 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +107,7 @@
        "Path('/home/sagemaker-user/git/sciflow/nbs/test/flows/sagemaker/test_multistep.py')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +342,7 @@
     "        ind = \"    \"\n",
     "        write_params(flow_file, param_meta, ind)\n",
     "        \n",
-    "        flow_file.write(f\"{ind}args = None\\n\")\n",
+    "        flow_file.write(f\"{ind}args = []\\n\")\n",
     "        flow_file.write(f\"{ind}param_types = {dict(zip(param_meta.keys(), [v.instance_type.__name__ for v in param_meta.values()]))}\\n\")\n",
     "    \n",
     "        flow_file.write(\"\\n\")\n",
@@ -363,9 +372,9 @@
     "        flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}if self.param_types[param] == 'int':\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}{ind}setattr(self, param, ParameterInteger(name=param, default_value=int(arg_val)))\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}elif self.param_types[param] == 'float':\\n\")\n",
-    "        flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}{ind}setattr(self, param, ParameterFloat(name=param, default_value=int(arg_val)))\\n\")\n",
+    "        flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}{ind}setattr(self, param, ParameterFloat(name=param, default_value=float(arg_val)))\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}elif self.param_types[param] == 'str':\\n\")\n",
-    "        flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}{ind}setattr(self, param, ParameterString(name=param, default_value=int(arg_val)))\\n\")\n",
+    "        flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}{ind}setattr(self, param, ParameterString(name=param, default_value=arg_val))\\n\")\n",
     "        flow_file.write(\"\\n\")\n",
     "        \n",
     "        flow_file.write(f\"{ind}def get_pipeline(self) -> Pipeline:\\n\")\n",
@@ -483,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -998,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1031,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1214,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1289,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1300,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1309,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1337,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1346,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1366,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1380,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1401,7 +1410,7 @@
       "Created sagemaker module: _sciflow_test_module_first.py\n",
       "No params cell found for: test_multistep_no_params.ipynb\n",
       "Sagemaker conversion failed for test_multistep_no_params.ipynb, \n",
-      "Reason: Step: preprocess depends on variable(s), \"{'min_date', 'model_level', 'traffic_percent'}\", which are not in the flow scope\n",
+      "Reason: Step: preprocess depends on variable(s), \"{'model_level', 'traffic_percent', 'min_date'}\", which are not in the flow scope\n",
       "Sagemaker conversion failed for test_data_handling.ipynb, \n",
       "Reason: Unsupported parameter type for sagemaker pipeline: ParamMeta(instance_type=<class 'dict'>, is_scalar=False, is_json_type=True, persist_type='pickle', has_metaflow_param=True, has_sagemaker_param=False)\n"
      ]
