--- a/nbs/utils.ipynb
+++ b/nbs/utils.ipynb
@@ -52,6 +52,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Collections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def chunks(lst, n):\n",
+    "    \"\"\"Yield successive n-sized chunks from lst.\"\"\"\n",
+    "    for i in range(0, len(lst), n):\n",
+    "        yield lst[i:i + n]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Paths"
    ]
   },
